second commits to css and html files

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <h3>This is my profilo page</h3>
         <br>
         <p>I love it!!</p>
+        <h1>This is my initial static page!</h1>
 
 
 
