Added reset and index.css file

--- a/index.html
+++ b/index.html
@@ -1,16 +1,24 @@
-<<!DOCTYPE html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
     <head>
-        <title>My Profilo</title>
+        <meta charset="utf-8">
+        <link rel="stylesheet" href="css/reset.css">
+        <link rel="stylesheet" href="css/index.css">
+        <title>My Portfolio</title>
     </head>
-
     <body>
-        <h3>This is my profilo page</h3>
-        <br>
-        <p>I love it!!</p>
-        <h1>This is my initial static page!</h1>
+        <section class="container">
+            <header>
+                <nav>
+                    <ul>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="index.html">About me</a></li>
+                        <li><a href="">Music</a></li>
+                    </ul>
+                </nav>
+            </header>
 
-
+        <section>
 
 
     </body>
