--- a/index.html
+++ b/index.html
@@ -53,11 +53,7 @@
 <body>
 
   <section class="preload">
-    <div class="lds-roller">
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
+    <div class="lds-ripple">
       <div></div>
       <div></div>
     </div>
